@@ -1,13 +1,0 @@
-/* { dg-do run } */
-/* { dg-data {a*} {foo = foo + 1;} foo.pk } */
-
-/* Check that foo.pk is not loaded twice.  */
-
-var foo = 0;
-
-/* { dg-command { load foo } } */
-/* { dg-command { foo } } */
-/* { dg-output "1" } */
-/* { dg-command { load foo } } */
-/* { dg-command { foo } } */
-/* { dg-output "\n1" } */
